--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -16,8 +16,8 @@ dim_feedforward: 1024
 num_queries: 40
 # dropout: 0.1
 dropout: 0.0
-# temperature: 10000
-temperature: 20
+temperature: 10000
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -36,10 +36,13 @@ batch_size: 1
 # fix_encoder: false
 fix_encoder: true
 fix_transform: false
-neck: mixer
-lr_backbone: 0.0001
-# neck: identity
-
+# neck: mixer
+# lr_backbone: 0.0001
+neck: identity
+act_reg: false
+two_stage: true
+mixed_selection: true
+look_forward_twice: false
 
 # Image
 # img_resize: 440
@@ -57,5 +60,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_swin_base_mixer
+output_dir: outputs/thumos14_swin_base_identity
 # output_dir: outputs/thumos14_swin_small_
