--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -32,7 +32,7 @@ fix_transform: false
 neck: identity
 # lr_backbone: 0.0001
 two_stage: true
-act_reg: false
+act_reg: true
 
 # Image
 # img_resize: 440
@@ -49,5 +49,5 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_ori
+output_dir: outputs/thumos14_e2e_slowfast_two_stage_act_reg
 
