--- a/configs/base.yml
+++ b/configs/base.yml
@@ -45,7 +45,7 @@ neck: identity
 # lr_backbone: 0.00001
 # neck: identity
 act_reg: true
-two_stage: true
+two_stage: false
 mixed_selection: false
 look_forward_twice: false
 
