--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -2,10 +2,10 @@
 encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-# size: small
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
-size: base
-pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
+size: small
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+# size: base
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 # model setting
 enc_layers: 4
@@ -37,7 +37,7 @@ batch_size: 1
 fix_encoder: true
 fix_transform: false
 # neck: mixer
-# lr_backbone: 0.0001
+lr_backbone: 0.00001
 neck: identity
 act_reg: true
 two_stage: false
