--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -36,9 +36,9 @@ batch_size: 1
 # fix_encoder: false
 fix_encoder: false
 fix_transform: false
-# neck: mixer
-# lr_backbone: 0.00001
-neck: identity
+neck: simple_mixer
+lr_backbone: 0.0001
+# neck: identity
 act_reg: true
 two_stage: false
 mixed_selection: false
@@ -47,12 +47,12 @@ look_forward_twice: false
 # Image
 # img_resize: 440
 # img_crop_size: 384
-# img_resize: 256
-# img_crop_size: 224
+img_resize: 256
+img_crop_size: 224
 # img_resize: 110
 # img_crop_size: 96
-img_resize: 192
-img_crop_size: 168
+# img_resize: 192
+# img_crop_size: 168
 
 # Training
 # act_reg: false
