--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -34,7 +34,7 @@ lr: 0.0001
 batch_size: 1
 
 # fix_encoder: false
-fix_encoder: false
+fix_encoder: true
 fix_transform: false
 neck: simple_mixer
 lr_backbone: 0.0001
