--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -44,7 +44,7 @@ fix_transform: false
 # neck: mixer
 # lr_backbone: 0.00001
 neck: identity
-act_reg: true
+act_reg: false
 two_stage: false
 mixed_selection: false
 look_forward_twice: true
@@ -65,4 +65,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_single_scale
+output_dir: outputs/thumos14_e2e_slowfast_10fps_multi_scale_identity_no_act_reg_lft
