--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -41,9 +41,8 @@ fix_encoder: true
 # fix_encoder: false
 fix_transform: false
 # neck: pyramid
-# neck: mixer
-# lr_backbone: 0.00001
 neck: mixer
+lr_backbone: 0.00001
 act_reg: false
 two_stage: false
 mixed_selection: false
