--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -42,7 +42,7 @@ neck: identity
 act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: true
+look_forward_twice: false
 
 # Image
 # img_resize: 440
@@ -62,5 +62,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_swin_base_full_168_lft
+output_dir: outputs/thumos14_swin_base_full_168
 # output_dir: outputs/thumos14_swin_base_identity_multi_scale_lft
