--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -2,7 +2,6 @@
 encoder: slowfast
 slowfast_depth: 50
 pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
-
 # encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
@@ -56,7 +55,7 @@ img_crop_size: 224
 act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: false
+look_forward_twice: true
 
 
 # Training
