--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -17,7 +17,7 @@ dim_feedforward: 1024
 # dim_feedforward: 2048
 num_queries: 40
 # num_queries: 100
-dropout: 0.1
+dropout: 0.0
 # dropout: 0.0
 temperature: 10000
 # temperature: 20
@@ -43,8 +43,8 @@ fix_transform: false
 # neck: pyramid
 neck: identity
 lr_backbone: 0.0001
-act_reg: true
-two_stage: false
+act_reg: false
+two_stage: true
 mixed_selection: false
 look_forward_twice: true
 
@@ -64,6 +64,6 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_identity_single_scale_pooler_rel_pos_1e-4_lft
+output_dir: outputs/thumos14_e2e_slowfast_10fps_tdm_fpn_two_stage
 
 # tuner 48.77
