--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -20,7 +20,7 @@ dim_feedforward: 1024
 num_queries: 40
 # num_queries: 100
 # dropout: 0.1
-dropout: 0.1
+dropout: 0.0
 temperature: 10000
 # temperature: 20
 
@@ -52,8 +52,8 @@ neck: identity
 # img_crop_size: 96
 img_resize: 256
 img_crop_size: 224
-act_reg: true
-two_stage: false
+act_reg: false
+two_stage: true
 mixed_selection: false
 look_forward_twice: true
 
@@ -66,4 +66,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 rand_erase: false
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_full
+output_dir: outputs/thumos14_e2e_slowfast_10fps_full_two_stage_lft_dp0
