--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -13,16 +13,16 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 
 
 # model setting
-enc_layers: 6
-dec_layers: 6
+enc_layers: 4
+dec_layers: 4
 dim_feedforward: 2048
 # dim_feedforward: 2048
-num_queries: 40
+num_queries: 100
 # num_queries: 100
 # dropout: 0.1
 dropout: 0.0
-temperature: 10000
-# temperature: 20
+# temperature: 10000
+temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -52,8 +52,8 @@ neck: identity
 # img_crop_size: 96
 img_resize: 256
 img_crop_size: 224
-act_reg: false
-two_stage: true
+act_reg: true
+two_stage: false
 mixed_selection: false
 look_forward_twice: true
 
