--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -42,7 +42,7 @@ fix_encoder: false
 # fix_encoder: true
 fix_transform: false
 # neck: pyramid
-lr_backbone: 0.00001
+# lr_backbone: 0.00001
 neck: identity
 
 # Image
